crates/vlc-http/tests/snapshots/test_cases__case@command-playlist-add-01.txt.snap
---
source: crates/vlc-http/tests/test_cases.rs
expression: output
input_file: crates/vlc-http/tests/inputs/command-playlist-add-01.txt
---
[
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file%3A%2F%2F%2Ffile.txt",
  ), Model(
    items: {
      0: "file:///file.txt",
    },
  )),
]
