crates/vlc-http/tests/snapshots/test_cases__case@command-playlist-delete-01.txt.snap
---
source: crates/vlc-http/tests/test_cases.rs
expression: output
input_file: crates/vlc-http/tests/inputs/command-playlist-delete-01.txt
---
[
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file%3A%2F%2F%2FA.txt",
  ), Model(
    items: {
      0: "file:///A.txt",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file%3A%2F%2F%2FB.txt",
  ), Model(
    items: {
      0: "file:///A.txt",
      1: "file:///B.txt",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file%3A%2F%2F%2FC.txt",
  ), Model(
    items: {
      0: "file:///A.txt",
      1: "file:///B.txt",
      2: "file:///C.txt",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=pl_delete&id=1",
  ), Model(
    items: {
      0: "file:///A.txt",
      2: "file:///C.txt",
    },
  )),
]
