crates/vlc-http/tests/snapshots/test_cases__case@command-playlist-play-01.txt.snap
---
source: crates/vlc-http/tests/test_cases.rs
expression: output
input_file: crates/vlc-http/tests/inputs/command-playlist-play-01.txt
---
[
  Harness(Model(
    items: {
      0: "file:///a",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json?command=pl_play&id=0",
  ), Model(
    items: {
      0: "file:///a",
    },
    current_item_id: Some((0, Playing)),
  )),
]
