crates/vlc-http/tests/snapshots/test_cases__case@query-art-01.txt.snap
---
source: vlc-http/tests/test_cases.rs
expression: output
input_file: vlc-http/tests/inputs/query-art-01.txt
---
[
  LogEntry(Endpoint(
    path_and_query: "/art?item=item_id_01",
  ), Model(
    art_endpoints: [
      "/art?item=item_id_01",
    ],
  )),
  LogEntry(Endpoint(
    path_and_query: "/art?item=item_id_02",
  ), Model(
    art_endpoints: [
      "/art?item=item_id_01",
      "/art?item=item_id_02",
    ],
  )),
]
